# p2p_chat

./: .gitignore  Cargo.toml  README.md  p2p-chat-cli.1.md
cli/: Cargo.toml
cli/src/: main.rs
common/: Cargo.toml  build.rs
common/proto/: chat.proto
common/src/: lib.rs
core/: Cargo.toml  build.rs
core/proto/: chat.proto
core/src/: lib.rs
frontend/: index.html  main.js  style.css
network/: Cargo.toml
network/src/: lib.rs
relay/: Cargo.toml  Dockerfile
relay/src/: main.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
