[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.36", features = ["full"] }
anyhow = "1.0"
common = { path = "../common" }
network = { path = "../network" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
