[package]
name = "network"
version = "0.1.0"
edition = "2024"

[dependencies]
libp2p = { version = "0.53", features = ["tokio", "tcp", "noise", "yamux", "gossipsub", "kad", "macros"] }
tokio = { version = "1.36", features = ["full"] }
futures = "0.3"
anyhow = "1.0"
common = { path = "../common" }
prost = "0.13"
uuid = { version = "1.8", features = ["v4"] }
