[package]
name = "relay"
version = "0.1.0"
edition = "2024"

[dependencies]
libp2p = { version = "0.53", features = ["tokio", "tcp", "websocket", "dns", "noise", "yamux", "gossipsub", "kad", "macros"] }
tokio = { version = "1.36", features = ["full"] }
futures = "0.3"
anyhow = "1.0"
common = { path = "../common" }
prost = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
