[package]
name = "wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
libp2p = { version = "0.53", default-features = false, features = ["wasm-ext", "web-socket-websys", "noise", "yamux", "gossipsub", "kad", "macros", "ed25519", "autonat"] }
common = { path = "../common" }
prost = "0.13"
uuid = { version = "1.8", features = ["v4", "js"] }
futures = { version = "0.3", features = ["std"] }
tokio = { version = "1.36", features = ["sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
getrandom = { version = "0.2", features = ["js"] }
